# nixops-gce

./: README.md  default.nix  pyproject.toml  release.nix  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml
ci/: check-mypy.sh
examples/: custom-image.nix  gce-route.nix  machine-with-disk.nix  machines-with-gce-disks.nix  rmq-gce.nix  trivial-gce.nix
examples/forwarding-rule/: README.md  nixops.nix
examples/simple-web-server/: nixops.nix
nix/: default.nix  gce-disk.nix  gce-forwarding-rule.nix  gce-http-health-check.nix  gce-image.nix  gce-images.nix  gce-routes.nix  gce-target-pool.nix  gce.nix
nixops-gcp/: plugin.py
nixops-gcp/backends/: gce.py
nixops-gcp/resources/: gce_disk.py  gce_forwarding_rule.py  gce_http_health_check.py  gce_image.py  gce_network.py  gce_route.py  gce_static_ip.py  gce_target_pool.py  gse_bucket.py
nixops_gcp/: gcp_common.py  plugin.py
nixops_gcp/backends/: gce.py  options.py
nixops_gcp/nix/: common-gce-options.nix  default.nix  gce-disk.nix  gce-images.nix  gce-network.nix  gce-static-ip.nix  gce.nix  gse-bucket.nix  image-options.nix
nixops_gcp/resources/: gce_disk.py  gce_forwarding_rule.py  gce_http_health_check.py  gce_image.py  gce_network.py  gce_route.py  gce_static_ip.py  gce_target_pool.py  gse_bucket.py
nixops_gcp/resources/types/: gce_disk.py  gce_forwarding_rule.py  gce_http_health_check.py  gce_image.py  gce_images.py  gce_network.py  gce_route.py  gce_routes.py  gce_static_ip.py  gce_target_pool.py  gse_bucket.py
nixopsgce/: plugin.py
nixopsgce/backends/: gce.py
nixopsgce/resources/: __init__.py  gce_disk.py  gce_forwarding_rule.py  gce_http_health_check.py  gce_image.py  gce_network.py  gce_route.py  gce_static_ip.py  gce_target_pool.py  gse_bucket.py
tests/functional/: single_machine_gce_base.nix  single_machine_static_ip_gce.nix
