[tool.poetry]
name = "nixops-gcp"
version = "1.0"
description = "NixOps backend for Google Cloud Platform"
authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
license = "MIT"
include = [ "nixops-gcp/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
apache-libcloud = "^3.0.0"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
nose = "^1"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
gcp = "nixops-gcp.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
