[tool.poetry]
name = "nixops_gcp"
version = "1.0"
description = "NixOps backend for Google Cloud Platform"
authors = ["Evgeny Egorochkin <phreedom@yandex.ru>"]
maintainers = ["Amine Chikhaoui <amine@chikhaoui.org>"]
license = "MIT"
include = [ "nixops_gcp/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.10"
apache-libcloud = "^3.7.0"
# implicit transitive dependency of apache-libcloud
cryptography = "41.0.2"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.961"
black = "^22.6.0"

[tool.poetry.plugins."nixops"]
gcp = "nixops_gcp.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
